Kirklees/partials/_vacancy-tiles.scss
.homepage-tiles {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  .homepage-tile {
    flex-basis: 250px;
    height: 250px;
    margin: 1rem 0;
    background-color: #a0a0a0;
    border-radius: 4px;
    transition: 0.2s;
    background-size: cover;
    background-position: center;
    &:hover {
      background-color: darken(#a0a0a0, 5%);
      transform: scale(1.05);
    }
    a {
      text-decoration: none;
    }
    .homepage-tile-inner {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
      align-content: center;
      color: #f0f0f0;
      text-align: center;
      text-decoration: none;
      height: 100%;
      background-color: rgba(0, 0, 0, 0.5);
      .homepage-tile-heading {
        font-size: 1.3rem;
      }
      .vacancy-count {
        font-size: 0.95rem;
      }
    }
  }
}

